--- a/src/App/Web/App.Web/Areas/Identity/Pages/Account/Register.cshtml
+++ b/src/App/Web/App.Web/Areas/Identity/Pages/Account/Register.cshtml
@@ -9,7 +9,7 @@
         <h1>@ViewData["Title"]</h1>
 
         <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h2>Create a new account.</h2>
+            <h2>Create a new card holder account.</h2>
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-floating">
