--- a/src/App/Web/App.Web/Views/Shared/_LoginPartial.cshtml
+++ b/src/App/Web/App.Web/Views/Shared/_LoginPartial.cshtml
@@ -4,7 +4,7 @@
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 
-<ul class="navbar-nav">
+<ul class="navbar-nav mt-3">
     @if (this.SignInManager.IsSignedIn(this.User))
     {
         <li class="nav-item">
