Added all discounts listing

--- a/src/App/Web/App.Web/Areas/Shopkeeper/Views/Shopkeeper/Dashboard.cshtml
+++ b/src/App/Web/App.Web/Areas/Shopkeeper/Views/Shopkeeper/Dashboard.cshtml
@@ -7,5 +7,6 @@
 
     <ul class="list-group">
         <li class="mb-3 list-group-item"><a class="text-decoration-none btn btn-primary" asp-action="AddDiscount">Add Discount</a></li>
+        <li class="mb-3 list-group-item"><a class="text-decoration-none btn btn-primary" asp-action="AllDiscounts">All Discounts</a></li>
     </ul>
 </div>
