--- a/src/App/Web/App.Web/Views/Shared/_Layout.cshtml
+++ b/src/App/Web/App.Web/Views/Shared/_Layout.cshtml
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/theme.min.css" asp-append-version="true" />
     <link rel="icon" type="image/x-icon" href="/images/favicon.png">
+    @await this.RenderSectionAsync("Css", required: false)
+    @if (this.ViewData.ContainsKey("UseAuthCss") && (bool)this.ViewData["UseAuthCss"])
+    {
+        <link rel="stylesheet" href="~/css/auth.min.css" asp-append-version="true" />
+    }
 </head>
 <body>
     <header>
@@ -26,26 +31,23 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
             </div>
         </nav>
     </header>
-    
-    <div class="container">
+
+    <div id="page-body" class="container">
         <partial name="_CookieConsentPartial" />
         <main role="main" class="pb-3">
             @this.RenderBody()
         </main>
     </div>
-    
+
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; @DateTime.Now.Year - @GlobalConstants.SystemName - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; @DateTime.Now.Year - @GlobalConstants.SystemName
         </div>
     </footer>
 
