--- a/src/App/Web/App.Web/Areas/Identity/Pages/Account/Login.cshtml
+++ b/src/App/Web/App.Web/Areas/Identity/Pages/Account/Login.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div class="row">
-    <div class="col-md-4 ms-auto me-auto">
+    <div class="col-md-5 ms-auto me-auto">
         <h1>@ViewData["Title"]</h1>
         <section>
             <form id="account" method="post">
@@ -24,9 +24,9 @@
                     <span asp-validation-for="Input.Password" class="text-danger"></span>
                 </div>
                 <div>
-                    <div class="checkbox">
+                    <div class="checkbox mb-2">
                         <label asp-for="Input.RememberMe" class="form-label">
-                            <input class="form-check-input" asp-for="Input.RememberMe" />
+                            <input class="form-check-input" asp-for="Input.RememberMe" checked="true" />
                             @Html.DisplayNameFor(m => m.Input.RememberMe)
                         </label>
                     </div>
@@ -34,7 +34,7 @@
                 <div>
                     <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">Log in</button>
                 </div>
-                <div>
+                <div class="mt-4">
                     <p>
                         <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
                     </p>
