--- a/src/App/Web/App.Web/Areas/Identity/Pages/Account/Register.cshtml
+++ b/src/App/Web/App.Web/Areas/Identity/Pages/Account/Register.cshtml
@@ -5,9 +5,8 @@
 }
 
 <div class="row">
-    <div class="col-md-4 ms-auto me-auto">
+    <div class="col-md-5 ms-auto me-auto">
         <h1>@ViewData["Title"]</h1>
-
         <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
             <h2>Create a new card holder account.</h2>
             <hr />
@@ -38,12 +37,15 @@
                 <span asp-validation-for="Input.PaymentCardNumber" class="text-danger"></span>
             </div>
             <div class="form-floating">
-                <input asp-for="Input.PaymentCardValidUntil" placeholder="MM/YY" class="form-control" autocomplete="on" aria-required="true" />
-                <label asp-for="Input.PaymentCardValidUntil"></label>
+                <input asp-for="Input.PaymentCardValidUntil" class="form-control" autocomplete="on" aria-required="true" />
+                <label asp-for="Input.PaymentCardValidUntil">Valid Thru MM/YY</label>
                 <span asp-validation-for="Input.PaymentCardValidUntil" class="text-danger"></span>
             </div>
             <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
         </form>
+        <p class="mt-3">
+            <a href="/Identity/Account/Login">Already an user?</a>
+        </p>
     </div>
 </div>
 
