--- a/src/App/Web/App.Web/Views/Shared/_CookieConsentPartial.cshtml
+++ b/src/App/Web/App.Web/Views/Shared/_CookieConsentPartial.cshtml
@@ -15,11 +15,12 @@
         </button>
     </div>
     <script>
-        (function () {
+        window.addEventListener('load', () => {
             var button = document.querySelector("#cookieConsent button[data-cookie-string]");
             button.addEventListener("click", function () {
                 document.cookie = button.dataset.cookieString;
+                document.getElementById("cookieConsent").remove();
             }, false);
-        })();
+        });
     </script>
 }
