--- a/src/App/Web/App.Web/wwwroot/css/site.css
+++ b/src/App/Web/App.Web/wwwroot/css/site.css
@@ -7,6 +7,11 @@ a.navbar-brand {
     word-break: break-all;
 }
 
+#page-body {
+    min-height: 79vh;
+    margin-bottom: 3rem;
+}
+
 /* Provide sufficient contrast against white background */
 a {
     color: #0366d6;
