--- a/src/App/Web/App.Web/Views/Shared/_LoginPartial.cshtml
+++ b/src/App/Web/App.Web/Views/Shared/_LoginPartial.cshtml
@@ -1,12 +1,82 @@
 ﻿@using App.Common
 @using App.Data.Models
+@using App.Services.Data.Users
 @using Microsoft.AspNetCore.Identity
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
+@inject IApplicationUsersService applicationUsersService
+
+<style>
+    .switch {
+        position: relative;
+        display: inline-block;
+        width: 60px;
+        height: 34px;
+    }
+
+        .switch input {
+            opacity: 0;
+            width: 0;
+            height: 0;
+        }
+
+    .slider {
+        position: absolute;
+        cursor: pointer;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: #ccc;
+        -webkit-transition: .4s;
+        transition: .4s;
+    }
+
+        .slider:before {
+            position: absolute;
+            content: "";
+            height: 26px;
+            width: 26px;
+            left: 4px;
+            bottom: 4px;
+            background-color: white;
+            -webkit-transition: .4s;
+            transition: .4s;
+        }
+
+    input:checked + .slider {
+        background-color: #f4623a;
+    }
+
+    input:focus + .slider {
+        box-shadow: 0 0 1px #2196F3;
+    }
+
+    input:checked + .slider:before {
+        -webkit-transform: translateX(26px);
+        -ms-transform: translateX(26px);
+        transform: translateX(26px);
+    }
+
+    .slider.round {
+        border-radius: 34px;
+    }
+
+        .slider.round:before {
+            border-radius: 50%;
+        }
+</style>
 
 <ul class="navbar-nav mt-3">
     @if (this.SignInManager.IsSignedIn(this.User))
     {
+        <li class="nav-item mt-2 me-2">
+            <img id="notify_bell" src="~/images/notification_on.png" width="35px" class="me-1" />
+            <label class="switch">
+                <input id="notifications" type="checkbox" @(applicationUsersService.GetNotificationsState(this.User) ? "checked" : "")>
+                <span class="slider round"></span>
+            </label>
+        </li>
         <li class="nav-item">
             <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @this.User.Identity.Name!</a>
         </li>
