Added notifications for occasions
Notifications for new discounts every week and for change of discount state

--- a/src/App/Web/App.Web/Areas/Administration/Views/Dashboard/Index.cshtml
+++ b/src/App/Web/App.Web/Areas/Administration/Views/Dashboard/Index.cshtml
@@ -3,4 +3,10 @@
     this.ViewData["Title"] = "Admin dashboard";
 }
 
-<h1>@this.ViewData["Title"]</h1>
+<div class="text-center">
+    <h1 class="p-md-4">@this.ViewData["Title"]</h1>
+
+    <ul class="list-group">
+        <li class="list-group-item"><a class="text-decoration-none btn btn-primary" href="/hangfire">Hangfire Dashboard</a></li>
+    </ul>
+</div>
