--- a/src/App/Web/App.Web/Areas/CardHolder/Views/CardHolder/Index.cshtml
+++ b/src/App/Web/App.Web/Areas/CardHolder/Views/CardHolder/Index.cshtml
@@ -5,6 +5,7 @@
     this.ViewData["Title"] = "All Active Discounts";
 }
 
+<!-- START -->
 <div class="m-4 light-background">
     <div class="p-4">
         <h1>@this.ViewData["Title"]</h1>
@@ -31,3 +32,4 @@
         </table>
     </div>
 </div>
+<!-- END -->
