Changed workflow of "Change Password"

--- a/src/App/Web/App.Web/Areas/BankEmployee/Views/BankEmployee/AllDiscounts.cshtml
+++ b/src/App/Web/App.Web/Areas/BankEmployee/Views/BankEmployee/AllDiscounts.cshtml
@@ -28,7 +28,15 @@
                         <td>@discount.EndDate</td>
                         @if (discount.HasVoted)
                         {
-                            <td>@discount.Status</td>
+                            var utcNow = DateTime.UtcNow;
+                            if (discount.EndDate < utcNow)
+                            {
+                                <td>@DiscountStatus.Expired</td>
+                            }
+                            else
+                            {
+                                <td>@discount.Status</td>
+                            }
                         }
                         else
                         {
